--- a/public/view/home.ejs
+++ b/public/view/home.ejs
@@ -1,9 +1,8 @@
 <%- include('./layout/header.ejs'); %>
-<div class="form-row-glass">
-  <input type="text" class="field" placeholder="Хайлт...">
-  
-  <div class="img-find"></div>
-</div>
+
+
+
+
   <div class="all-info">
         <div class="flex-container">
           <div class="flax-main">
@@ -15,8 +14,8 @@
                   <div class="one-news-blog">
                     <div class="item-news">
                       <ul>
-                        <li><a href="#0" class="item">Аялал</a></li>
-                        <li><a href="#0" class="item">Эрүүл Мэнд</a></li>
+                        <li><a href="#0" class="item"><%= users[i].category %></a></li>
+                     
                       </ul>
                     </div>
                     <a href="content/<%=users[i].id %>" >
@@ -26,10 +25,10 @@
                     <div class="footer">
                       
                       
-                      <div class="name-author">Мэдээ оруулсан: <%= users[i].user %></div>
+                      <div class="name-author">Admin: <%= users[i].user %></div>
                     </div>
                     <time class="news-time"><%= users[i].date %></time> 
-                    <div class="text"> <br>Үргэлжлүүлж унших  </div>
+                    <div class="text"> <br> Read more  </div>
                   </div>
                 </article>
                 <%  } %>
@@ -43,28 +42,34 @@
               <div class="different-sections">
       
                 <div class="different-section">
-                  <h3 class="right-news-titles">Шинэ Мэдээ</h3>
+                  <h3 class="right-news-titles">New Content</h3>
                   <div class="right-side-content">
                     <section class="right-last-news">
                       <% for(var i=0; i< users.length; i++) { %>
                       <article class="right-news">
                         <div class="one-right-photo">
                           <img src="../images/newsPhoto/<%= users[i].blogPhoto %>" 
-                          width="50px"
-                          height="50px"
+                          width="60px"
+                          height="60px"
                           />
                         </div>
                         <div class="side-info">
-                          <time class="news-time" datetime="2019-06-14"><%= users[i].date %></time>
+                         
                           <a href="#0">
                             <h3 class="right-news-title"><%= users[i].title %> </h3>
                           </a>
+                          <div class="name">Admin: <%= users[i].user %></div>
                         </div>
       
                       </article>
+                      
                       <% } %> 
                      
-      
+                      <div class="form-row-glass">
+                        <input type="text" class="field" placeholder="Search...">
+                        
+                        <div class="img-find"></div>
+                      </div>
                    
       
                     </section>
@@ -72,8 +77,23 @@
       
                 </div>
       
+             
+                
+            <div class="different-section">
+                  <h3 class="right-news-titles">Category</h3>
+                  <div class="right-side-content">
+                    <section class="all-items-list">
+                      <ul class="items-list">
+                        <% for(var i=0; i< users.length; i++) { %>
+                          <li><a href="category/<%=users[i].category %>" class="list-item"><%=users[i].category %><span class="number">12</span></a></li>
+                       
+                          <% } %> 
+                      </ul>
+                    </section>
+                  </div>
+                </div>
                 <div class="different-section">
-                  <h3 class="right-news-titles">Сэтгэгдэл</h3>
+                  <h3 class="right-news-titles">Comment</h3>
                   <div class="right-side-content">
                     <section class="email-address">
                       <form class="form-row">
@@ -81,28 +101,12 @@
                           <input type="email" class="field" placeholder="Email-аdress" required>
                         </label>
                         <div class="form-row-group">
-                          <button class="button">Илгээх</button>
+                          <button class="button">Send</button>
                         </div>
                       </form>
                     </section>
                   </div>
       
-                </div>
-                
-            <div class="different-section">
-                  <h3 class="right-news-titles">Ангилал</h3>
-                  <div class="right-side-content">
-                    <section class="all-items-list">
-                      <ul class="items-list">
-                        <li><a href="#0" class="list-item">Гоёл<span class="number">12</span></a></li>
-                        <li><a href="#0" class="list-item">Эрүүл мэнд<span class="number">4</span></a></li>
-                        <li><a href="#0" class="list-item">Амьдралын хэв маяг<span class="number">145</span></a></li>
-                        <li><a href="#0" class="list-item">Хөгжим<span class="number">28</span></a></li>
-                        <li><a href="#0" class="list-item">Спорт<span class="number">62</span></a></li>
-                        <li><a href="#0" class="list-item">Йог<span class="number">8</span></a></li>
-                      </ul>
-                    </section>
-                  </div>
                 </div>
               </div>
             </aside>
