--- a/public/view/newPost.ejs
+++ b/public/view/newPost.ejs
@@ -29,7 +29,14 @@
       class="form-control" 
    >
     </div>
-
+    <label>Category</label>
+    <select id="cars" name="category" class="form-control">
+      <option value="manga">Manga</option>
+      <option value="music">Music</option>
+      <option value="love">Love Story</option>
+      <option value="top">Top 10 anime</option>
+    </select>
+    <br>
     <button type="submit" class="btn btn-primary">Upload</button>
   </form>
       
