--- a/public/css/about.css
+++ b/public/css/about.css
@@ -219,4 +219,149 @@ html {
   .fa-user {
     color: #FFF;
   }
+
+  /* about me */
   
+ /*  About Page animation for content  */
+html, body {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  
+}
+
+.about-content, .about-panel {
+  max-width: 50%;
+  width: 50%;
+  margin-left: 50px;
+}
+
+.container {
+  margin: 0;
+  padding:0;
+  background-color: rgba(233, 150, 122, 0.2);
+  background-color: white;
+  overflow-y: auto;
+  height: 100vh;
+  max-width: 200%;
+}
+
+.about-panel {
+  padding: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  
+  height: 100vh;
+}
+.about-panel .photo-about {
+  position: relative;
+  top: 0;
+  height: 100vh !important;
+  background-size: cover;
+  overflow: hidden;
+
+}
+
+.about-info {
+  font-family: "Montserrat";
+  position: absolute;
+  z-index: 100100;
+  top: 50%;
+  color: white;
+  text-align: center;
+  width: 100%;
+}
+.about-info .about-info-name {
+  width: 100%;
+  letter-spacing: 3px;
+  font-weight: 500;
+  font-size: 2.5vw;
+}
+.about-info .about-info-contact {
+  margin-top: 25px;
+  padding-bottom: 100px;
+  margin-bottom: 100px;
+  height: 130px;
+}
+.about-info .about-info-contact h4 {
+  margin-bottom: 5px;
+  font-weight: 300;
+  font-size: 1.3vw;
+}
+.about-info .about-info-contact p {
+  font-size: 1.2vw;
+  font-weight: 100;
+  color: #b5b5b5;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+.about-info .about-info-contact a {
+  margin-bottom: 5px;
+  font-weight: 300;
+  font-size: 1.2vw;
+  color: #E2A9E5;
+}
+
+.about-content {
+  float: left;
+  padding-top: 30px;
+  background: white;
+  color: #4B384C;
+}
+.about-content p, .about-content blockquote {
+  font-size: 13px;
+  line-height: 20px;
+  letter-spacing: 0.07em;
+}
+.about-content h1 {
+  z-index: -1;
+  color: #632C65;
+  text-align: center;
+  line-height: 90px;
+  font-size: 90px;
+  font-weight: 200;
+  letter-spacing: -0.1em;
+  width: 95%;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left: 290px;
+}
+@media
+ only screen and (max-width: 450px) {
+  .about-content {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+.about-content .about-me {
+  margin: 3% auto;
+  text-align: justify;
+  font-weight: 300;
+  width: 63%;
+  margin-left: 400px;
+}
+.about-content .about-me p {
+  line-height: 23px;
+}
+.about-content .about-me .row {
+  height: 100vh;
+}
+
+.Synopsis-highlightLine {
+  width: 430px;
+  height: 4px;
+  background: #632C65;
+  margin: 30px 0;
+}
+
+.Synopsis-highlight {
+  font-weight: 700 !important;
+  font-size: 15px !important;
+  line-height: 25px !important;
+  width: 100%;
+  color: #632C65;
+ 
+}
+
