--- a/public/css/about1.css
+++ b/public/css/about1.css
@@ -6,7 +6,7 @@ position: relative;
 flex-direction: column;
 min-height: 600px;
 width: 100%;
-background-image: url("../images/232.jpg");
+background-image: url(" https://images6.alphacoders.com/106/1068675.png    ");
 background-color: #6d6c69;
 background-repeat: no-repeat;
 background-position: center top;
