--- a/public/view/SignUp.ejs
+++ b/public/view/SignUp.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="css/sign.css">
-    <title>Document</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <div class="login-wrap">
@@ -40,7 +40,7 @@
                  </div>
              
                  <div class="sign-up-htm">
-                    <form action="register" method="post" class="form">
+                    <form action="SignUp" method="post" class="form">
                     <div class="group">
                         <label for="user" class="label">Username </label>
                         <input id="user" type="text" class="input" name="username">
