--- a/public/view/admin-layout/header.ejs
+++ b/public/view/admin-layout/header.ejs
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.1/assets/img/favicons/favicon.ico">
 
-    <title>БҮТЭЭЛЧ, СПОРТ, АМЬДРАЛЫН БЛОГ</title>
+    <title>Mango Blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/dashboard/">
 
