--- a/public/view/layout/header.ejs
+++ b/public/view/layout/header.ejs
@@ -14,9 +14,11 @@
           <a href="#0" class="header-logo"><img src="https://images.vexels.com/media/users/3/206501/isolated/preview/e8525540c728ed1eb2169811db4f2538-floral-alphabet-letter-m-by-vexels.png" alt="M"
             width="70px"
             height="70px"></a>
+            
           <nav class="menu-list">
             <ul>
               <li><a href="/" class="menu-list-item">Home</a></li>
+              <li><a href="/img" class="menu-list-item">Image</a></li>
            
               <li><a href="/about" class="menu-list-item">About</a> </li>
               <li><a href="/login" class="menu-list-item">Login</a></li>
