--- a/view/img.ejs
+++ b/view/img.ejs
@@ -1,16 +1,11 @@
 
-  
+  <%- include('./layout/header.ejs'); %>
+
   <link rel="stylesheet" href="../css/img.css">
 <div id="hero-slides">
     <div id="header">
       <div id="logo"></div>
-      <div id="menu">
-        <div id="hamburger">
-          <div class="slice"></div>
-          <div class="slice"></div>
-          <div class="slice"></div>
-        </div>
-      </div>
+   
     </div>
     <div id="slides-cont">
       <div class="button" id="next"></div>
