--- a/view/content.ejs
+++ b/view/content.ejs
@@ -22,7 +22,7 @@
                       height="500px"> </div>
                       <br>
 
-                    <div class="prewiew-text">1. <br> <%= content.description %> </div>
+                    <div class="prewiew-text"> <br> <%= content.description %> </div>
                  
                    </div>
                 </article>
@@ -36,35 +36,17 @@
               <div class="different-sections">
       
          
-                <div class="different-section">
-                  <h3 class="right-news-titles">Ангилал</h3>
-                  <div class="right-side-content">
-                    <section class="items-tegs">
-                      <ul class="all-tegs">
-                        <li><a href="#0" class="teg">Загвар</a></li>
-                        <li><a href="#0" class="teg">Хөгжим</a></li>
-                        <li><a href="#0" class="teg">Хэв маяг</a></li>
-                        <li><a href="#0" class="teg">Урлаг</a></li>
-                        <li><a href="#0" class="teg">Дотоод засал</a></li>
-                        <li><a href="#0" class="teg">Аялал</a></li>
-                        <li><a href="#0" class="teg">Хоол</a></li>
-                        <li><a href="#0" class="teg">Эрүүл мэнд</a></li>
-                      </ul>
-                    </section>
-                  </div>
-                </div>
       
                 <div class="different-section">
                   <h3 class="right-news-titles">Category</h3>
                   <div class="right-side-content">
                     <section class="all-items-list">
                       <ul class="items-list">
-                        <li><a href="#0" class="list-item">Manga<span class="number">12</span></a></li>
-                        <li><a href="#0" class="list-item">Best anime<span class="number">4</span></a></li>
-                        <li><a href="#0" class="list-item">Top 10 anime<span class="number">145</span></a></li>
-                        <li><a href="#0" class="list-item">Music<span class="number">28</span></a></li>
-                        <li><a href="#0" class="list-item">Love story<span class="number">62</span></a></li>
-                        <li><a href="#0" class="list-item">Teen Story<span class="number">8</span></a></li>
+                        <li><a href="#0" class="list-item">Manga<span class="number"></span></a></li>
+                        <li><a href="#0" class="list-item">Top anime<span class="number"></span></a></li>
+                        <li><a href="#0" class="list-item">Music<span class="number"></span></a></li>
+                        <li><a href="#0" class="list-item">Love story<span class="number"></span></a></li>
+                      
                       </ul>
                     </section>
                   </div>
