--- a/public/css/img.css
+++ b/public/css/img.css
@@ -13,6 +13,27 @@ a {
   color: inherit;
 }
 
+.menu-list > ul {
+  display: flex;
+  list-style-type: none;
+  margin-top: 5px;
+  padding-left: 0;
+  margin-left: 850px;
+  }
+  
+  .menu-list + .menu-list-item {
+  margin-left: 200px;
+  }
+  
+  .menu-list-item {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: Cursive;
+  color: #ffffff;
+  margin-left: 35px;
+  }
+
+  
 #hero-slides {
   --page: 0;
   height: 100vh;
@@ -29,17 +50,8 @@ a {
   font-size: 2.5vh;
   font-style: italic;
 }
-#hero-slides #header #logo:before {
-  content: "The";
-  text-transform: uppercase;
-  font-weight: 100;
-  margin-right: 0.4em;
-}
-#hero-slides #header #logo:after {
-  content: "Wall";
-  text-transform: uppercase;
-  font-weight: 800;
-}
+
+
 #hero-slides #header #menu {
   position: absolute;
   top: 0;
@@ -307,16 +319,7 @@ a {
   opacity: 0;
   transform: translate3D(-200px, 0, 0);
 }
-#hero-slides #footer #dribbble:after {
-  content: "";
-  display: inline-block;
-  width: 4vh;
-  height: 4vh;
-  margin-left: 1vh;
-  background-image: url(https://i.pinimg.com/736x/b3/cc/d5/b3ccd57b054a73af1a0d281265b54ec8.jpg);
-  background-size: contain;
-  background-position: center;
-}
+
 #hero-slides #footer #dribbble.hover, #hero-slides #footer #dribbble:hover {
   background: #e94e89;
 }
