--- a/view/layout/header1.ejs
+++ b/view/layout/header1.ejs
@@ -18,6 +18,7 @@
           <nav class="menu-list">
             <ul>
               <li><a href="/" class="menu-list-item">Home</a></li>
+              <li><a href="/img" class="menu-list-item">Image</a></li>
            
               <li><a href="/about" class="menu-list-item">About</a> </li>
               <li><a href="/login" class="menu-list-item">Login</a></li>
