--- a/view/content.ejs
+++ b/view/content.ejs
@@ -42,11 +42,10 @@
                   <div class="right-side-content">
                     <section class="all-items-list">
                       <ul class="items-list">
-                        <li><a href="#0" class="list-item">Manga<span class="number"></span></a></li>
-                        <li><a href="#0" class="list-item">Top anime<span class="number"></span></a></li>
-                        <li><a href="#0" class="list-item">Music<span class="number"></span></a></li>
-                        <li><a href="#0" class="list-item">Love story<span class="number"></span></a></li>
-                      
+                        <% for(var i=0; i< content.length; i++) { %>
+                          <li><a href="category/<%=content[i].category %>" class="list-item"><%=content[i].category %></a></li>
+                       
+                          <% } %> 
                       </ul>
                     </section>
                   </div>
@@ -68,10 +67,6 @@
                   </div>
       
                 </div>
-      
-               
-                  
-          
               </div>
             </aside>
           </div>
